--- a/content/talk/ecom90004.md
+++ b/content/talk/ecom90004.md
@@ -1,17 +1,17 @@
 +++
-date = "2018-10-23"
+date = "2020-08-24"
 all_day = true
-title = "An Empircial Investigation into the Growing Global Financial Implications of China"
+title = "R Markdown - A Better Way of Communicating with Data"
 abstract = ""
 abstract_short = ""
-event = "Time Series and Forecasting Project Wining Team"
-event_url = ""
-location = "The University of Melbourne"
+event = "R Ladies Melbourne"
+event_url = "https://www.meetup.com/en-AU/rladies-melbourne/events/272501382/"
+location = "R Ladies Melbourne"
 
 selected = false
 math = false
 
-url_slides = "https://dai.netlify.com/slides/ecom90004"
-url_code = "https://github.com/DanyangDai/danyangdai.github.io"
+url_slides = "https://rmarkdown-rladiesmelbourne.netlify.app/"
+url_code = "https://github.com/DanyangDai/rladies-melbourne-rmarkdown"
 
 +++
